--- a/mini-blog/package.json
+++ b/mini-blog/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-project",
+  "name": "mini-blog",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.4.0",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.16",
     "web-vitals": "^2.1.4"
@@ -23,7 +24,10 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "rules": {
+      "eqeqeq": "off"
+    }
   },
   "browserslist": {
     "production": [
